--- a/closure.browser.conf
+++ b/closure.browser.conf
@@ -1,6 +1,6 @@
 --compilation_level=ADVANCED_OPTIMIZATIONS
 --language_out=ES5
---js_output_file=dist/bundle.js
+--js_output_file=dist/browser.js
 --output_manifest=dist/manifest.MF
 --variable_renaming_report=dist/variable_renaming_report
 --property_renaming_report=dist/property_renaming_report
@@ -23,8 +23,14 @@ node_modules/@angular/core/src/testability/testability.externs.js
 node_modules/@angular/common/@angular/common.js
 --js_module_root=node_modules/@angular/common
 
+node_modules/@angular/forms/@angular/forms.js
+--js_module_root=node_modules/@angular/forms
+
+node_modules/@angular/router/@angular/router.js
+--js_module_root=node_modules/@angular/router
+
 node_modules/@angular/platform-browser/@angular/platform-browser.js
 --js_module_root=node_modules/@angular/platform-browser
 
 --js build/**.js
---entry_point=./build/main
+--entry_point=./build/browser/main.browser
