--- a/package.json
+++ b/package.json
@@ -1,31 +1,63 @@
 {
-  "name": "trellis",
+  "name": "angular-closure-build",
   "version": "0.0.0",
-  "devDependencies": {
+  "dependencies": {
     "@angular/animations": "^4.3.4",
     "@angular/common": "^4.3.4",
-    "@angular/compiler": "^4.3.4",
-    "@angular/compiler-cli": "^4.3.4",
     "@angular/core": "^4.3.4",
+    "@angular/forms": "^4.3.4",
     "@angular/http": "^4.3.4",
     "@angular/platform-browser": "^4.3.4",
+    "@angular/platform-server": "^4.3.4",
     "@angular/router": "^4.3.4",
     "@angular/tsc-wrapped": "^4.3.4",
-    "clang-format": "^1.0.53",
-    "google-closure-compiler": "20170409.0.0",
-    "lite-server": "^2.3.0",
+    "core-js": "^2.5.0",
+    "express": "^4.15.4",
     "rxjs": "^5.4.3",
-    "source-map-explorer": "^1.4.0",
-    "typescript": "^2.4.2",
     "zone.js": "^0.8.16"
   },
+  "devDependencies": {
+    "@angular/compiler": "^4.3.4",
+    "@angular/compiler-cli": "^4.3.4",
+    "@ngtools/webpack": "^1.5.0",
+    "@types/core-js": "^0.9.42",
+    "@types/express": "^4.0.36",
+    "@types/node": "^8.0.20",
+    "@types/webpack": "^3.0.8",
+    "clang-format": "^1.0.53",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.4",
+    "file-loader": "^0.11.2",
+    "google-closure-compiler": "20170409.0.0",
+    "node-sass": "^4.5.3",
+    "raw-loader": "^0.5.1",
+    "rimraf": "^2.6.1",
+    "sass-loader": "^6.0.6",
+    "source-map-explorer": "^1.4.0",
+    "to-string-loader": "^1.1.5",
+    "ts-helpers": "^1.1.2",
+    "ts-node": "^3.3.0",
+    "typescript": "^2.4.2",
+    "webpack": "^3.5.4"
+  },
   "scripts": {
-    "build": "ngc -p src && yarn run closure && ./brotli.sh",
-    "format": "clang-format --glob='{{src,test}/**/,}*.{js,ts}' -i",
-    "format:enforce": "clang-format --glob='{{src}/**/,}*.{js,ts}' -output-replacements-xml | grep -c offset | grep 0",
-    "closure": "java -jar node_modules/google-closure-compiler/compiler.jar --flagfile closure.conf",
-    "closure-debug": "java -jar node_modules/google-closure-compiler/compiler.jar --flagfile closure.conf --debug --formatting PRETTY_PRINT",
-    "serve": "lite-server -c test/browser.config.json",
-    "explore": "source-map-explorer dist/bundle.js dist/bundle.js.map"
+    "build": "yarn run build:browser && yarn run build:server && yarn run build:compress",
+    "build:browser": "yarn run build:browser:ngc && yarn run build:browser:closure",
+    "build:browser:ngc": "ngc -p src/tsconfig.closure.browser.json",
+    "build:browser:closure": "java -jar node_modules/google-closure-compiler/compiler.jar --flagfile closure.browser.conf",
+    "build:browser:closure-debug": "java -jar node_modules/google-closure-compiler/compiler.jar --flagfile closure.browser.conf --debug --formatting PRETTY_PRINT",
+    "build:server": "yarn run build:server:webpack",
+    "build:server:webpack": "webpack --progress",
+    "x:build:server": "yarn run x:build:server:ngc && yarn run x:build:server:closure",
+    "x:build:server:ngc": "ngc -p src/tsconfig.closure.server.json",
+    "x:build:server:closure": "java -jar node_modules/google-closure-compiler/compiler.jar --flagfile closure.server.conf",
+    "x:build:server:closure-debug": "java -jar node_modules/google-closure-compiler/compiler.jar --flagfile closure.server.conf --debug --formatting PRETTY_PRINT",
+    "build:compress": "./compress.sh",
+    "format": "clang-format --glob='{src/**/,}*.{js,ts}' -i",
+    "format:enforce": "clang-format --glob='{src/**/,}*.{js,ts}' -output-replacements-xml | grep -c offset | grep 0",
+    "serve": "node ./dist/server.js",
+    "explore:browser": "source-map-explorer dist/browser.js dist/browser.js.map",
+    "explore:server": "source-map-explorer dist/server.js dist/server.js.map",
+    "clean": "rimraf ./dist && rimraf ./build && rimraf ./src/ngfactory"
   }
 }
