Server webpack build replaced with a Bazel build

--- a/closure.conf
+++ b/closure.conf
@@ -32,5 +32,5 @@ node_modules/@angular/router/@angular/router.js
 node_modules/@angular/platform-browser/@angular/platform-browser.js
 --js_module_root=node_modules/@angular/platform-browser
 
---js build/**.js
---entry_point=./build/browser/main.browser
+--js closure-build/**.js
+--entry_point=./closure-build/main.browser
