--- a/package.json
+++ b/package.json
@@ -2,62 +2,48 @@
   "name": "angular-closure-build",
   "version": "0.0.0",
   "dependencies": {
-    "@angular/animations": "^4.3.4",
-    "@angular/common": "^4.3.4",
-    "@angular/core": "^4.3.4",
-    "@angular/forms": "^4.3.4",
-    "@angular/http": "^4.3.4",
-    "@angular/platform-browser": "^4.3.4",
-    "@angular/platform-server": "^4.3.4",
-    "@angular/router": "^4.3.4",
-    "@angular/tsc-wrapped": "^4.3.4",
+    "@angular/animations": "4.3.0",
+    "@angular/common": "4.3.0",
+    "@angular/core": "4.3.0",
+    "@angular/forms": "4.3.0",
+    "@angular/http": "4.3.0",
+    "@angular/platform-browser": "4.3.0",
+    "@angular/platform-browser-dynamic": "4.3.0",
+    "@angular/platform-server": "4.3.0",
+    "@angular/router": "4.3.0",
+    "@angular/tsc-wrapped": "4.3.0",
+    "@angular/upgrade": "4.3.0",
     "core-js": "^2.5.0",
     "express": "^4.15.4",
     "rxjs": "^5.4.3",
     "zone.js": "^0.8.16"
   },
   "devDependencies": {
-    "@angular/compiler": "^4.3.4",
-    "@angular/compiler-cli": "^4.3.4",
-    "@ngtools/webpack": "^1.5.0",
+    "@angular/compiler": "4.3.0",
+    "@angular/compiler-cli": "4.3.0",
     "@types/core-js": "^0.9.42",
     "@types/express": "^4.0.36",
-    "@types/node": "^8.0.20",
-    "@types/webpack": "^3.0.8",
+    "@types/node": "^8.0.22",
     "clang-format": "^1.0.53",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.4",
-    "file-loader": "^0.11.2",
     "google-closure-compiler": "20170409.0.0",
-    "node-sass": "^4.5.3",
-    "raw-loader": "^0.5.1",
+    "protobufjs": "^5.0.2",
     "rimraf": "^2.6.1",
-    "sass-loader": "^6.0.6",
     "source-map-explorer": "^1.4.0",
-    "to-string-loader": "^1.1.5",
-    "ts-helpers": "^1.1.2",
-    "ts-node": "^3.3.0",
-    "typescript": "^2.4.2",
-    "webpack": "^3.5.4"
+    "typescript": "~2.3.4"
   },
   "scripts": {
-    "build": "yarn run build:browser && yarn run build:server && yarn run build:compress",
+    "build": "yarn run build:browser && yarn run build:server && yarn run build:dist",
     "build:browser": "yarn run build:browser:ngc && yarn run build:browser:closure",
     "build:browser:ngc": "ngc -p src/tsconfig.closure.browser.json",
-    "build:browser:closure": "java -jar node_modules/google-closure-compiler/compiler.jar --flagfile closure.browser.conf",
-    "build:browser:closure-debug": "java -jar node_modules/google-closure-compiler/compiler.jar --flagfile closure.browser.conf --debug --formatting PRETTY_PRINT",
-    "build:server": "yarn run build:server:webpack",
-    "build:server:webpack": "webpack --progress",
-    "x:build:server": "yarn run x:build:server:ngc && yarn run x:build:server:closure",
-    "x:build:server:ngc": "ngc -p src/tsconfig.closure.server.json",
-    "x:build:server:closure": "java -jar node_modules/google-closure-compiler/compiler.jar --flagfile closure.server.conf",
-    "x:build:server:closure-debug": "java -jar node_modules/google-closure-compiler/compiler.jar --flagfile closure.server.conf --debug --formatting PRETTY_PRINT",
-    "build:compress": "./compress.sh",
+    "build:browser:closure": "java -jar node_modules/google-closure-compiler/compiler.jar --flagfile closure.conf",
+    "build:browser:closure-debug": "java -jar node_modules/google-closure-compiler/compiler.jar --flagfile closure.conf --debug --formatting PRETTY_PRINT",
+    "build:server": "yarn run build:server:bazel",
+    "build:server:bazel": "bazel build ng_libs && bazel build src",
+    "build:dist": "cp src/index.html dist && cp node_modules/zone.js/dist/zone.min.js dist && ./compress.sh && cp -r dist bazel-bin",
     "format": "clang-format --glob='{src/**/,}*.{js,ts}' -i",
     "format:enforce": "clang-format --glob='{src/**/,}*.{js,ts}' -output-replacements-xml | grep -c offset | grep 0",
-    "serve": "node ./dist/server.js",
-    "explore:browser": "source-map-explorer dist/browser.js dist/browser.js.map",
-    "explore:server": "source-map-explorer dist/server.js dist/server.js.map",
-    "clean": "rimraf ./dist && rimraf ./build && rimraf ./src/ngfactory"
+    "serve": "node ./bazel-bin/src/main.server.js",
+    "explore": "source-map-explorer dist/browser.js dist/browser.js.map",
+    "clean": "bazel clean && rimraf ./dist && rimraf ./closure-build && rimraf ./src/ngfactory"
   }
 }
