--- a/package.json
+++ b/package.json
@@ -13,15 +13,14 @@
     "@angular/router": "4.3.0",
     "@angular/tsc-wrapped": "4.3.0",
     "@angular/upgrade": "4.3.0",
-    "core-js": "^2.5.0",
     "express": "^4.15.4",
+    "reflect-metadata": "^0.1.10",
     "rxjs": "^5.4.3",
     "zone.js": "^0.8.16"
   },
   "devDependencies": {
     "@angular/compiler": "4.3.0",
     "@angular/compiler-cli": "4.3.0",
-    "@types/core-js": "^0.9.42",
     "@types/express": "^4.0.36",
     "@types/node": "^8.0.22",
     "clang-format": "^1.0.53",
