--- a/src/tsconfig.bazel.server.json
+++ b/src/tsconfig.bazel.server.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "es2015",
     "moduleResolution": "node",
-    "target": "es5",
-    "lib": ["es2017", "dom"],
+    "target": "es2016",
+    "lib": [ "es2016", "dom" ],
     "declaration": true,
 
     "sourceMap": true,
