Folded zone.js into closure build (instead of being included as a script in index.html). This reduced the compressed build size by around 900 bytes.

--- a/closure.conf
+++ b/closure.conf
@@ -32,5 +32,8 @@ node_modules/@angular/router/@angular/router.js
 node_modules/@angular/platform-browser/@angular/platform-browser.js
 --js_module_root=node_modules/@angular/platform-browser
 
+node_modules/zone.js/dist/zone.js
+--js_module_root=node_modules/zone-js/dist/zone
+
 --js closure-build/**.js
 --entry_point=./closure-build/main.browser
